--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         .container{
             height: 100vh;
             width: 100%;
-            background-image: url(images/spiderman.jpg);
+            background-image: url(spiderman.jpg);
             background: linear-gradient(rgba(233, 233, 233, 0.5),#000101d3), url(images/spiderman.jpg);
             display: flex;
             justify-content: center;
