--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height: 100vh;
             width: 100%;
             background-image: url(spiderman.jpg);
-            background: linear-gradient(rgba(233, 233, 233, 0.5),#000101d3), url(spiderman.jpg)  cover ,no-repeat, center ;
+            background: linear-gradient(rgba(233, 233, 233, 0.5),#000101d3), url(spiderman.jpg)  ;
             display: flex;
             justify-content: center;
             align-items: center;
