--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         *{
             margin: 0;
             padding: 0;
+            transition : all ease-in-out 0.3s; 
         }
         .container{
             height: 100vh;
